# slack-types

./: .gitignore  .npmignore  LICENSE.txt  README.md  package-lock.json  package.json  pyproject.toml  setup.cfg
app-backend/interactive-components/: BlockActionPayload.d.ts
audit-api/v1/: SchemasResponse.d.ts
events-api/: MessageDeletedPayload.d.ts  MessageFileSharePayload.d.ts  MessageRepliedPayload.d.ts  TeamJoinPayload.d.ts
json/rtm-api/: MessageEvent.json  PinAddedEvent.json  PinRemovedEvent.json  StarAddedEvent.json  StarRemovedEvent.json
json/web-api/: chat.postMessage.json  chat.scheduleMessage.json  chat.update.json  conversations.history.json  conversations.open.json  conversations.replies.json  files.info.json  files.list.json  files.remote.add.json  files.remote.list.json  files.sharedPublicURL.json  pins.list.json  reactions.get.json  reactions.list.json  rtm.start.json  search.all.json  search.files.json  search.messages.json  views.open.json  views.push.json
rtm-api/: MessageEvent.d.ts  PinRemovedEvent.d.ts  StarAddedEvent.d.ts  StarRemovedEvent.d.ts  TeamJoinEvent.d.ts  UserChangeEvent.d.ts
scim-api/v1/: UserResponse.d.ts
scripts/: build-python.sh  build.py  copy-from-java-slack-sdk.sh  generate-all.sh  generate-py-app-backend-types.rb  generate-py-audit-api-types.rb  generate-py-events-api-types.rb  generate-py-rtm-api-types.rb  generate-py-scim-api-types.rb  generate-py-web-api-types.rb  generate-ts-app-backend-types.rb  generate-ts-audit-api-types.rb  generate-ts-events-api-types.rb  generate-ts-rtm-api-types.rb  generate-ts-scim-api-types.rb  generate-ts-web-api-types.rb  release-npm-package.sh  release-pypi-package.sh
scripts/lib/: py_generate.py  py_writer.rb  ts_writer.rb
tests/: test_imports.py  test_roundtrip.py
typescript/events-api/: AppMentionPayload.d.ts  AppRequestedPayload.d.ts  ChannelCreatedPayload.d.ts  (+32 more)
web-api/: AdminTeamsSettingsInfoResponse.d.ts  ChatUpdateResponse.d.ts  ConversationsHistoryResponse.d.ts  ConversationsInfoResponse.d.ts  ConversationsListConnectInvitesResponse.d.ts  ConversationsListResponse.d.ts  FilesRemoteAddResponse.d.ts  FilesRemoteInfoResponse.d.ts  FilesRemoteListResponse.d.ts  FilesRemoteShareResponse.d.ts  FilesRevokePublicURLResponse.d.ts  FilesSharedPublicURLResponse.d.ts  PinsListResponse.d.ts  ReactionsListResponse.d.ts  RtmStartResponse.d.ts  SearchFilesResponse.d.ts  StarsListResponse.d.ts  TeamInfoResponse.d.ts  TeamProfileGetResponse.d.ts  UsersConversationsResponse.d.ts  UsersListResponse.d.ts  UsersLookupByEmailResponse.d.ts  UsersProfileGetResponse.d.ts  ViewsOpenResponse.d.ts  index.ts
(+752 files in other folders)
