[metadata]
name = slack-types
version = 0.0.1
author = Warren Seine @warrenseine
author_email = warren.seine@gmail.com
description = Slack API Types in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/warrenseine/slack-types
project_urls =
    Bug Tracker = https://github.com/warrenseine/slack-types/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = python
packages = find:
python_requires = >=3.7

[options.packages.find]
where = python
include = *
